# 3Sisters-Legacy-Game-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
fonts/: readme.md
inc/: animation.hpp  collision_layer.hpp  physics_system.hpp  swept_physics.hpp  swept_physics_internal.hpp  window_app.hpp
shaders/: quad.frag  quad.vert  readme.md  text.frag  text.vert
sounds/: readme.md
src/: animation.cpp  main.cpp  physics_system.cpp  swept_physics.cpp  window_app.cpp
textures/: readme.md
